external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_attr_defines_prim.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_check/parser/invalid_attr_defines_prim.move:1:3
  │
1 │ #[defines_primitive]
  │   ^^^^^^^^^^^^^^^^^ Attribute 'defines_primitive' does not support name-only usage. Expected parameterized attribute '#[defines_primitive(<primitive_type_name>)'
  │
  = Attribute defines_primitive requires the name of the primitive being defined, e.g., '#[defines_primitive(vector)]'

error[E02015]: invalid attribute
  ┌─ tests/move_check/parser/invalid_attr_defines_prim.move:5:3
  │
5 │ #[defines_primitive = 400]
  │   ^^^^^^^^^^^^^^^^^^^^^^^ Attribute 'defines_primitive' does not support assignment. Expected parameterized attribute '#[defines_primitive(<primitive_type_name>)'
  │
  = Attribute defines_primitive requires the name of the primitive being defined, e.g., '#[defines_primitive(vector)]'

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/parser/invalid_attr_defines_prim.move:9:21
  │
9 │ #[defines_primitive(Foo)]
  │                     ^^^ Invalid parameterization of 'defines_primitive'. Unknown primitive type 'Foo'
